////////////////////////////////////////////////////////////////////////////////
/// @file         GroupManagement.proto
///
/// @author       Stephen Jackson <scj7t4@mst.edu>
///
/// @description  Declaration of all group management message types
///
/// These source code files were created at Missouri University of Science and
/// Technology, and are intended for use in teaching or research. They may be
/// freely copied, modified, and redistributed as long as modified versions are
/// clearly marked as such and this notice is not removed. Neither the authors
/// nor Missouri S&T make any warranty, express or implied, nor assume any legal
/// responsibility for the accuracy, completeness, or usefulness of these files
/// or any information distributed with these files.
///
/// Suggested modifications or questions about these files can be directed to
/// Dr. Bruce McMillin, Department of Computer Science, Missouri University of
/// Science and Technology, Rolla, MO 65409 <ff@mst.edu>.
////////////////////////////////////////////////////////////////////////////////

import "GroupManagement.proto";

package freedm.broker.fg;


message StateMessage {
    required bool coordinator = 1;
    repeated gm.AreYouCoordinatorResponseMessage ayc_responses = 2;
    required bool selling = 3;
    
}

message TakeMessage
{

}

message TakeResponseMessage
{
    required bool response = 1;
}

message FederatedGroupsMessage
{
    optional StateMessage state_message = 1;
    optional TakeMessage take_message = 2;
    optional TakeResponseMessage take_response_message = 3;
}
