////////////////////////////////////////////////////////////////////////////////
/// @file         LoadBalancing.proto
///
/// @author       Michael Catanzaro <michael.catanzaro@mst.edu>
///
/// @description  Declaration of all load balancing message types
///
/// These source code files were created at Missouri University of Science and
/// Technology, and are intended for use in teaching or research. They may be
/// freely copied, modified, and redistributed as long as modified versions are
/// clearly marked as such and this notice is not removed. Neither the authors
/// nor Missouri S&T make any warranty, express or implied, nor assume any legal
/// responsibility for the accuracy, completeness, or usefulness of these files
/// or any information distributed with these files.
///
/// Suggested modifications or questions about these files can be directed to
/// Dr. Bruce McMillin, Department of Computer Science, Missouri University of
/// Science and Technology, Rolla, MO 65409 <ff@mst.edu>.
////////////////////////////////////////////////////////////////////////////////

package freedm.broker.lb;

message ComputedNormalMessage
{
    required double computed_normal = 1;
}

message AcceptMessage
{
    required float demand_value = 1;
}

message LoadBalancingMessage
{
    enum Type
    {
        COMPUTED_NORMAL_MESSAGE = 1;
        REQUEST_MESSAGE = 2;
        DRAFTING_MESSAGE = 3;
        YES_MESSAGE = 4;
        NO_MESSAGE = 5;
        ACCEPT_MESSAGE = 6;
        DEMAND_MESSAGE = 7;
        NORMAL_MESSAGE = 8;
        SUPPLY_MESSAGE = 9;
    }

    required Type type = 1;

    optional ComputedNormalMessage computed_normal_message = 2;
    optional AcceptMessage accept_message = 3;
}
